# grpc-proxy-study

./: Makefile  README.md  go.mod  go.sum  idea.md  proposal.md  test.sh
api/echo/: echo.pb  echo.pb.go  echo.proto  echo_grpc.pb.go
backend/: main.go
benchmark/: main.go
certs/: ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  proxy.crt  proxy.csr  proxy.key
client/: main.go
go-proxy/: config.yaml
go-proxy/backend/: main.go
go-proxy/client/: main.go
go-proxy/proxy/: crypto.go  main.go
prompts/: enhanced.md
proxy/: main.go
rust-crypto/: Cargo.toml  build.rs  cryptolib.h
rust-crypto/src/: lib.rs
