[package]
name = "rust-crypto"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "rustcrypto"
crate-type = ["cdylib", "staticlib"]

[dependencies]
rsa = { version = "0.9.6", features = ["sha2", "pem"] }
sha2 = "0.10.8"
pkcs1 = { version = "0.7.5", features = ["pem"] }
pkcs8 = { version = "0.10.2", features = ["pem"] }
x509-cert = { version = "0.2.5", features = ["pem"] }
spki = { version = "0.7.3" }
libc = "0.2.155"

[build-dependencies]
cbindgen = "0.26.0"
